# testpackagepower

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  main.py  old_file_for_setup.py  pyproject.toml  requirement.yml  requirements.txt  setup.py
.github/workflows/: manual_workflow.yml  python-publish.yml
examples/: example.ipynb
testpackagepower/: __init__.py  compute.py  data_process.py
testpackagepower/tests/: test_compute.py
